--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.15",
     "framer-motion": "^12.5.0",
@@ -20,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15"
